--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^8.14.0",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
+  },
+  "engines": {
+    "node": "20.19.1"
   }
 }
